<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.entrystore.rowstore</groupId>
    <artifactId>rowstore-parent</artifactId>
    <version>1.3.0</version>
    <name>RowStore</name>
    <packaging>pom</packaging>

    <prerequisites>
        <maven>3.0</maven>
    </prerequisites>

    <properties>
        <slf4j.version>1.7.30</slf4j.version>
        <log4j.version>2.14.0</log4j.version>
        <restlet.version>2.4.3</restlet.version>
        <servlet.version>3.1.0</servlet.version>
        <opencsv.version>5.3</opencsv.version>
        <postgresql.version>42.2.18</postgresql.version>
        <jsonorg.version>20201115</jsonorg.version>
        <guava.version>30.1-jre</guava.version>
        <license.licenseName>apache_v2</license.licenseName>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <modules>
        <module>standalone</module>
        <module>webapp</module>
    </modules>

    <developers>
        <developer>
            <name>Hannes Ebner</name>
            <id>hannes</id>
            <email>hannes@metasolutions.se</email>
            <organization>MetaSolutions AB</organization>
        </developer>
    </developers>

    <organization>
        <name>MetaSolutions AB</name>
        <url>https://www.metasolutions.se</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/</url>
            <distribution>repo</distribution>
            <comments />
        </license>
    </licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>2.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>EntryStore</id>
            <url>https://maven.entrystore.org</url>
        </repository>
        <repository>
            <id>Restlet</id>
            <url>https://maven.restlet.talend.com</url>
        </repository>
    </repositories>

    <dependencies>
    </dependencies>

    <dependencyManagement>
        <dependencies>
        </dependencies>
    </dependencyManagement>

</project>